styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

button {
  font-size: 1.125rem;
  padding: .5rem 2.75rem;
}

input, textarea {
  font-family: inherit;
  font-size: 1.25rem;
  padding: .75rem;
}

